# clix

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  TODO.md  audit.toml  go.mod  go.sum
.claude/: settings.local.json
.github/workflows/: build-linux.yml  ci.yml  release.yml
assets/apparmor/: clix-worker
cmd/clix/: main.go
crates/clix-broker/: Cargo.toml
crates/clix-broker/src/: main.rs
crates/clix-broker/tests/: peercred_auth.rs  token_mint.rs
crates/clix-cli/: Cargo.toml
crates/clix-cli/src/: cli.rs  dynamic_cli.rs  main.rs  output.rs
crates/clix-cli/src/commands/: approve.rs  broker.rs  capabilities.rs  doctor.rs  infisical.rs  init.rs  mcp.rs  mod.rs  pack.rs  profile.rs  receipts.rs  run.rs  secrets.rs  serve.rs  shim.rs  status.rs  sync.rs  tools.rs  tui.rs  workflow.rs
crates/clix-cli/src/tui/: app.rs  mod.rs  theme.rs  work.rs
crates/clix-cli/src/tui/screens/: broker.rs  capabilities.rs  dashboard.rs  infisical_accounts.rs  infisical_setup.rs  mod.rs  packs.rs  profiles.rs  receipt_detail.rs  receipts.rs  secrets.rs  workflows.rs
crates/clix-cli/src/tui/screens/wizards/: capability.rs  mod.rs  pack.rs  profile.rs
crates/clix-cli/src/tui/widgets/: checklist.rs  form.rs  mod.rs  secret_picker.rs  secrets_tree.rs
crates/clix-cli/tests/: cli_smoke.rs
crates/clix-core/: Cargo.toml
crates/clix-core/benches/: dispatch_latency.rs
crates/clix-core/src/: error.rs  lib.rs  loader.rs  state.rs
crates/clix-core/src/discovery/: classify.rs  help_parse.rs  mod.rs  path_scan.rs
crates/clix-core/src/execution/: approval.rs  broker_client.rs  mod.rs  validators.rs  worker_protocol.rs  worker_registry.rs
crates/clix-core/src/execution/backends/: builtin.rs  isolated.rs  mod.rs  remote.rs  subprocess.rs
crates/clix-core/src/manifest/: capability.rs  loader.rs  mod.rs  pack.rs  profile.rs  workflow.rs
crates/clix-core/src/packs/: bundle.rs  diff.rs  discover.rs  install.rs  mod.rs  onboard.rs  scaffold.rs  seed.rs  signing.rs  validate.rs
crates/clix-core/src/policy/: evaluate.rs  mod.rs
crates/clix-core/src/receipts/: mod.rs  schema.sql
crates/clix-core/src/registry/: mod.rs
crates/clix-core/src/sandbox/: jail.rs  linux.rs  macos.rs  mod.rs  seccomp.rs  stub.rs
crates/clix-core/src/schema/: mod.rs
crates/clix-core/src/secrets/: keyring.rs  mod.rs  redact.rs
crates/clix-core/src/storage/: git.rs  mod.rs
crates/clix-core/src/template/: mod.rs
crates/clix-core/tests/: binary_pinning.rs  bypass_smoke.rs  jail_escape.rs  manifest_loader_errors.rs  migrations.rs  pack_sign_verify.rs  profile_dedup.rs  profile_switch.rs  redaction.rs  sandbox_mode.rs  secrets_integration.rs
crates/clix-core/tests/fixtures/help/: gcloud-latest.txt
crates/clix-serve/: Cargo.toml
crates/clix-serve/src/: dispatch.rs  lib.rs  metrics.rs
crates/clix-serve/src/methods/: extensions.rs  mcp.rs  mod.rs
crates/clix-serve/src/transport/: http.rs  mod.rs  socket.rs  stdio.rs
crates/clix-serve/tests/: dispatch_matrix.rs  e2e_dispatch.rs  receipts_export.rs
crates/clix-shim/: Cargo.toml
crates/clix-shim/src/: main.rs
crates/clix-shim/tests/: path_shadow.rs
crates/clix-testkit/: Cargo.toml
crates/clix-testkit/src/: capability.rs  fixtures.rs  lib.rs  mock.rs  receipts.rs  serve.rs  temp_home.rs
crates/clix-worker/: Cargo.toml
crates/clix-worker/src/: main.rs
docs/: agent-quickstart.md  agent-tool-registry.md  architecture.md  clix-core-ops.yaml  clix-profile-and-plugin-plan.md  clix-tui.yaml  integration-claude.md  integration-cursor.md  integration-gemini.md  pack.md  quickstart.md  release.md  tui-phase-raw.txt
docs/design/: TODO.md  clix-core-ops.yaml  clix-tui.yaml  gap-analysis.yaml  tui-phase-raw.txt
docs/releases/: v0.5.0.md  v0.5.1.md  v0.5.2.md
docs/superpowers/plans/: 2026-04-13-namespace-tools-list.md  2026-04-13-phase1-foundation.md  2026-04-13-phase2-execution.md  2026-04-13-phase3-packs-cli.md  2026-04-13-phase4-serve.md
docs/superpowers/specs/: 2026-04-13-rust-rewrite-design.md
examples/claude-code-gcp/: CLAUDE.md  README.md  clix-policy.yaml
examples/claude-code-gcp/pack/: pack.yaml
internal/clix/: approval.go  builtins.go  bundles.go  capabilities.go  cli.go  client.go  clix_test.go  execution.go  gateway_test.go  infisical.go  infisical_integration_test.go  models.go  onboard.go  packs.go  policy.go  profiles.go  receipts.go  sandbox.go  sandbox_other.go  sandbox_test.go  schema.go  secrets.go  serve.go  state.go  template.go  version.go  workflows.go
packs/base/: pack.yaml
packs/base/capabilities/: system.date.yaml  system.echo.yaml
packs/base/profiles/: base.yaml
packs/gcloud-aiplatform/: pack.yaml
packs/gcloud-aiplatform/capabilities/: datasets-list.yaml  endpoints-describe.yaml  endpoints-list.yaml  jobs-list.yaml  models-describe.yaml  models-list.yaml
packs/gcloud-readonly/: pack.yaml
packs/gcloud-readonly/capabilities/: gcloud.list-projects.yaml
packs/gcloud-readonly/profiles/: gcloud-readonly.yaml
packs/gh-readonly/: pack.yaml
packs/gh-readonly/capabilities/: gh.list-repos.yaml
packs/gh-readonly/profiles/: gh-readonly.yaml
packs/git-readonly/capabilities/: git.log.yaml  git.status.yaml
packs/kubectl-observe/: pack.yaml
packs/kubectl-observe/capabilities/: kubectl.get-namespaces.yaml  kubectl.get-nodes.yaml  kubectl.get-pods.yaml
packs/kubectl-observe/profiles/: kubectl-observe.yaml
packs/kubectl-observe/workflows/: kubectl.cluster-health.yaml
scripts/: install.sh
