[workspace]
resolver = "2"
members = [
    "crates/clix-core",
    "crates/clix-cli",
    "crates/clix-serve",
    "crates/clix-worker",
    "crates/clix-broker",
    "crates/clix-shim",
]

[workspace.dependencies]
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
serde_yaml         = "0.9"
thiserror          = "2"
anyhow             = "1"
tokio              = { version = "1", features = ["full"] }
reqwest            = { version = "0.12", features = ["blocking", "json"] }
clap               = { version = "4", features = ["derive", "env"] }
uuid               = { version = "1", features = ["v4", "serde"] }
chrono             = { version = "0.4", features = ["serde"] }
jsonschema         = "0.18"
minijinja          = "2"
axum               = "0.7"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zip                = "2"
sha2               = "0.10"
hex                = "0.4"
dirs               = "5"
whoami             = "1"
urlencoding        = "2"
rusqlite           = { version = "0.32", features = ["bundled"] }
tempfile           = "3"
libc               = "0.2"
criterion          = { version = "0.5", features = ["html_reports"] }
