[workspace]
resolver = "2"
members = [
    "crates/clix-core",
    "crates/clix-cli",
    "crates/clix-serve",
    "crates/clix-worker",
    "crates/clix-broker",
    "crates/clix-shim",
    "crates/clix-testkit",
]

[workspace.dependencies]
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
serde_yaml         = "0.9"
thiserror          = "2"
anyhow             = "1"
tokio              = { version = "1", features = ["full"] }
reqwest            = { version = "0.12", features = ["blocking", "json"] }
clap               = { version = "4", features = ["derive", "env"] }
uuid               = { version = "1", features = ["v4", "serde"] }
chrono             = { version = "0.4", features = ["serde"] }
jsonschema         = "0.18"
minijinja          = "2"
axum               = "0.7"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
zip                = "2"
sha2               = { version = "0.10", features = ["oid"] }
hex                = "0.4"
dirs               = "5"
whoami             = "1"
urlencoding        = "2"
rusqlite           = { version = "0.32", features = ["bundled"] }
tempfile           = "3"
libc               = "0.2"
criterion          = { version = "0.5", features = ["html_reports"] }
keyring            = { version = "3", features = ["async-secret-service", "async-io", "crypto-rust"] }
rpassword          = "7"
base64             = "0.22"
which              = "4"
prometheus         = { version = "0.13", features = ["process"] }
ed25519-dalek      = { version = "2", features = ["rand_core", "pem"] }
rand_core          = { version = "0.6", features = ["getrandom"] }
pkcs8              = { version = "0.10", features = ["pem"] }
assert_cmd         = "2"
predicates         = "3"
insta              = { version = "1", features = ["yaml", "json"] }
wiremock           = "0.6"
rstest             = "0.23"
proptest           = "1"
