[package]
name    = "clix-broker"
version = "0.4.0"
edition = "2021"

[dependencies]
clix-core   = { path = "../clix-core" }
serde       = { workspace = true }
serde_json  = { workspace = true }
chrono      = { workspace = true }
dirs        = { workspace = true }
urlencoding = { workspace = true }
sha2        = { workspace = true }
base64      = { workspace = true }
rsa         = { version = "0.9", features = ["pem"] }
rand        = "0.8"
uuid        = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile     = { workspace = true }
wiremock     = { workspace = true }
tokio        = { workspace = true }
clix-testkit = { path = "../clix-testkit" }
