[package]
name    = "clix-cli"
version = "0.2.0"
edition = "2021"
default-run = "clix"

[[bin]]
name = "clix"
path = "src/main.rs"

[dependencies]
clix-core  = { path = "../clix-core" }
clix-serve = { path = "../clix-serve" }
clap       = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
serde      = { workspace = true }
anyhow     = { workspace = true }
tokio      = { workspace = true }
whoami     = { workspace = true }
dirs       = { workspace = true }
uuid       = { workspace = true }
ratatui    = "0.29"
crossterm  = "0.28"
rpassword  = { workspace = true }
chrono     = { workspace = true }
sha2          = { workspace = true }
hex           = { workspace = true }
ed25519-dalek = { workspace = true }
rand_core     = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc       = { workspace = true }
