[package]
name    = "clix-cli"
version = "0.4.1"
edition = "2021"
default-run = "clix"

[[bin]]
name = "clix"
path = "src/main.rs"

[dependencies]
clix-core  = { path = "../clix-core" }
clix-serve = { path = "../clix-serve" }
clap       = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
serde      = { workspace = true }
anyhow     = { workspace = true }
tokio      = { workspace = true }
whoami     = { workspace = true }
dirs       = { workspace = true }
uuid       = { workspace = true }
ratatui    = "0.30"
crossterm  = "0.29"
rpassword  = { workspace = true }
chrono     = { workspace = true }
sha2          = { workspace = true }
hex           = { workspace = true }
ed25519-dalek = { workspace = true }
rand_core          = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc       = { workspace = true }

[dev-dependencies]
assert_cmd   = { workspace = true }
predicates   = { workspace = true }
tempfile     = { workspace = true }
clix-testkit = { path = "../clix-testkit" }
