[package]
name    = "clix-core"
version = "0.2.0"
edition = "2021"

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
serde_yaml  = { workspace = true }
thiserror   = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }
jsonschema  = { workspace = true }
minijinja   = { workspace = true }
reqwest     = { workspace = true }
urlencoding = { workspace = true }
rusqlite    = { workspace = true }
dirs        = { workspace = true }
sha2        = { workspace = true }
hex         = { workspace = true }
zip         = { workspace = true }
tempfile      = { workspace = true }
which         = { workspace = true }
ed25519-dalek = { workspace = true }
rand_core     = { workspace = true }
pkcs8         = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
libc     = "0.2"
keyring  = { workspace = true }

[dev-dependencies]
tempfile  = { workspace = true }
criterion = { workspace = true }

[[bench]]
name    = "dispatch_latency"
harness = false

[target.'cfg(target_os = "linux")'.dev-dependencies]
libc = "0.2"
ctor = "0.2"
