[package]
name    = "clix-serve"
version = "0.4.0"
edition = "2021"

[dependencies]
clix-core  = { path = "../clix-core" }
tokio      = { workspace = true }
axum       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
prometheus = { workspace = true }

[dev-dependencies]
clix-testkit = { path = "../clix-testkit" }
tokio        = { workspace = true }
rstest       = { workspace = true }
wiremock     = { workspace = true }
