[package]
name    = "clix-shim"
version = "0.4.0"
edition = "2021"

# The shim binary is renamed at install time to match the CLI tool name (e.g. "gcloud").
# It is tiny on purpose — no async, minimal deps.

[[bin]]
name = "clix-shim"
path = "src/main.rs"

[dependencies]
serde_json = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile   = { workspace = true }
